--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
   <header class="header-main clearfix">
-    <h1 class="logo  "> MART </h1>
+
+    <h1 class="logo"> MART </h1>
+
     <nav>
       <ul class=" site-navigation  ">
         <li><a href="#">HOME</a> </li>
@@ -27,81 +29,81 @@
   <main class="main-content clearfix">
     <ul class="featured-list clearfix ">
       <li class="featured-list-item">
-        <a href="#" class="link-image  clearfix">
-          <img class="image-shop" src="./img/Rectangle 50.jpg.png" alt="Blue Tshirt"></a>
-        <a href="#">
-          <h3 class="header-shop">Blue Tshirt</h3>
+        <a href="#" class="link-image ">
+          <img class="image-shop" src="./img/images/1.png" alt="Blue Tshirt"></a>
+        <a class="header-shop " href="#">
+          <h3>Blue Tshirt</h3>
         </a>
-        <span>21</span>
+        <span>&#36;26</span>
       </li>
       <li class="featured-list-item">
         <a href="#">
-          <img class="image-shop" src="./img/2.jpg.png" alt="WOMAN shirt">
+          <img class="image-shop" src="./img/images/2.png" alt="WOMAN shirt">
         </a>
         <a href="#">
           <h3 class="header-shop">WOMAN shirt</h3>
         </a>
-        <span>31</span>
+        <span>&#36;31</span>
       </li>
       <li class="featured-list-item">
         <a href="#">
-          <img class="image-shop" src="./img/3.jpg.png" alt="YELLOW Tshirt">
+          <img class="image-shop" src="./img/images/3.png" alt="YELLOW Tshirt">
         </a>
         <a href="#">
           <h3 class="header-shop">YELLOW Tshirt</h3>
         </a>
-        <span>56</span>
+        <span>&#36;26</span>
       </li>
       <li class="featured-list-item">
         <a href="#">
-          <img class="image-shop" src="./img/4.jpg.png" alt="Cool lingerie">
+          <img class="image-shop" src="./img/images/4.png" alt="Cool lingerie">
         </a>
         <a href="#">
           <h3 class="header-shop">Cool lingerie</h3>
         </a>
-        <span>26</span>
+        <span>&#36;56</span>
       </li>
       <li class="featured-list-item">
         <a href="#">
-          <img class="image-shop" src="./img/5.jpg.png" alt="Blue Tshirt">
+          <img class="image-shop" src="./img/images/5.png" alt="Blue Tshirt">
         </a>
         <a href="#">
           <h3 class="header-shop">Blue Tshirt</h3>
         </a>
-        <span>26</span>
+        <span> &#36;26</span>
       </li>
       <li class="featured-list-item">
         <a href="#">
-          <img class="image-shop" src="./img/6.jpg.png" alt="WOMAN shirt">
+          <img class="image-shop" src="./img/images/6.png" alt="WOMAN shirt">
         </a>
         <a href="#">
           <h3 class="header-shop">WOMAN shirt</h3>
         </a>
-        <span>26</span>
+        <span>&#36;31</span>
       </li>
       <li class="featured-list-item">
         <a href="#">
-          <img class="image-shop" src="./img/7.jpg.png" alt="YELLOW Tshirt">
+          <img class="image-shop" src="./img/images/7.png" alt="YELLOW Tshirt">
         </a>
         <a href="#">
           <h3 class="header-shop">YELLOW Tshirt</h3>
         </a>
-        <span>26</span>
+        <span>&#36;21</span>
       </li>
       <li class="featured-list-item">
         <a href="#">
-          <img class="image-shop" src="./img/8.jpg.png" alt="Cool lingerie">
+          <img class="image-shop" src="./img/images/8.png" alt="Cool lingerie">
         </a>
         <a href="#">
           <h3 class="header-shop">Cool lingerie</h3>
         </a>
-        <span>26</span>
+        <span>&#36;56</span>
       </li>
     </ul>
     <ul class="LATEST">
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><img src="./img/image2/ipad-632394_960_720.jpg" alt=""></li>
+      <li><img src="./img/image2/2.jpg" alt=""></li>
+      <li><img src="./img/image2/3.jpg" alt=""></li>
     </ul>
 
   </main>
