--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Module-4</title>
   <link rel="stylesheet" href="./css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto:wght@300;900&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Roboto:ital,wght@0,300;1,900&display=swap"
     rel="stylesheet">
 </head>
 
@@ -27,85 +28,119 @@
     </nav>
   </header>
   <main class="main-content clearfix">
-    <ul class="featured-list clearfix ">
-      <li class="featured-list-item">
-        <a href="#" class="link-image ">
-          <img class="image-shop" src="./img/images/1.png" alt="Blue Tshirt"></a>
-        <a class="header-shop " href="#">
-          <h3>Blue Tshirt</h3>
-        </a>
-        <span>&#36;26</span>
-      </li>
-      <li class="featured-list-item">
-        <a href="#">
-          <img class="image-shop" src="./img/images/2.png" alt="WOMAN shirt">
-        </a>
-        <a href="#">
-          <h3 class="header-shop">WOMAN shirt</h3>
-        </a>
-        <span>&#36;31</span>
-      </li>
-      <li class="featured-list-item">
-        <a href="#">
-          <img class="image-shop" src="./img/images/3.png" alt="YELLOW Tshirt">
-        </a>
-        <a href="#">
-          <h3 class="header-shop">YELLOW Tshirt</h3>
-        </a>
-        <span>&#36;26</span>
-      </li>
-      <li class="featured-list-item">
-        <a href="#">
-          <img class="image-shop" src="./img/images/4.png" alt="Cool lingerie">
-        </a>
-        <a href="#">
-          <h3 class="header-shop">Cool lingerie</h3>
-        </a>
-        <span>&#36;56</span>
-      </li>
-      <li class="featured-list-item">
-        <a href="#">
-          <img class="image-shop" src="./img/images/5.png" alt="Blue Tshirt">
-        </a>
-        <a href="#">
-          <h3 class="header-shop">Blue Tshirt</h3>
-        </a>
-        <span> &#36;26</span>
-      </li>
-      <li class="featured-list-item">
-        <a href="#">
-          <img class="image-shop" src="./img/images/6.png" alt="WOMAN shirt">
-        </a>
-        <a href="#">
-          <h3 class="header-shop">WOMAN shirt</h3>
-        </a>
-        <span>&#36;31</span>
-      </li>
-      <li class="featured-list-item">
-        <a href="#">
-          <img class="image-shop" src="./img/images/7.png" alt="YELLOW Tshirt">
-        </a>
-        <a href="#">
-          <h3 class="header-shop">YELLOW Tshirt</h3>
-        </a>
-        <span>&#36;21</span>
-      </li>
-      <li class="featured-list-item">
-        <a href="#">
-          <img class="image-shop" src="./img/images/8.png" alt="Cool lingerie">
-        </a>
-        <a href="#">
-          <h3 class="header-shop">Cool lingerie</h3>
-        </a>
-        <span>&#36;56</span>
-      </li>
-    </ul>
-    <ul class="LATEST">
-      <li><img src="./img/image2/ipad-632394_960_720.jpg" alt=""></li>
-      <li><img src="./img/image2/2.jpg" alt=""></li>
-      <li><img src="./img/image2/3.jpg" alt=""></li>
-    </ul>
+    <section class="Name-of-product">
+      <h2 class="Section-title">FEATURED PRODUCTS</h2>
+      <ul class="featured-list clearfix ">
+        <li class="featured-list-item">
+          <a href="#" class="link-image ">
+            <img class="image-shop" src="./img/images/1.png" alt="Blue Tshirt"></a>
+          <div class="bottom-shop clearfix ">
+            <h3 class="header-shop "><a class="header-shop-link " href="#">Blue Tshirt</a></h3>
 
+            <span class="price-shop">&#36;26</span>
+          </div>
+        </li>
+        <li class="featured-list-item">
+          <a href="#">
+            <img class="image-shop" src="./img/images/2.png" alt="WOMAN shirt">
+          </a>
+          <div class="bottom-shop clearfix ">
+            <h3 class="header-shop"><a class="header-shop-link " href="#">WOMAN shirt</a></h3>
+
+            <span class="price-shop">&#36;31</span>
+          </div>
+        </li>
+        <li class="featured-list-item">
+          <a href="#">
+            <img class="image-shop" src="./img/images/3.png" alt="YELLOW Tshirt">
+          </a>
+          <div class="bottom-shop clearfix ">
+            <h3 class="header-shop "><a class="header-shop-link" href="#">YELLOW Tshirt</a></h3>
+
+            <span class="price-shop">&#36;26</span>
+          </div>
+        </li>
+        <li class="featured-list-item">
+          <a href="#">
+            <img class="image-shop" src="./img/images/4.png" alt="Cool lingerie">
+          </a>
+          <div class="bottom-shop clearfix ">
+            <h3 class="header-shop"><a class="header-shop-link " href="#">Cool lingerie</a></h3>
+
+            <span class="price-shop">&#36;56</span>
+          </div>
+        </li>
+        <li class="featured-list-item">
+          <a href="#">
+            <img class="image-shop" src="./img/images/5.png" alt="Blue Tshirt">
+          </a>
+          <div class="bottom-shop clearfix ">
+            <h3 class="header-shop"><a class="header-shop-link " href="#">Blue Tshirt</a></h3>
+
+            <span class="price-shop"> &#36;26</span>
+          </div>
+        </li>
+        <li class="featured-list-item">
+          <a href="#">
+            <img class="image-shop" src="./img/images/6.png" alt="WOMAN shirt">
+          </a>
+          <div class="bottom-shop clearfix ">
+            <h3 class="header-shop"><a class="header-shop-link " href="#">WOMAN shirt</a></h3>
+
+            <span class="price-shop">&#36;31</span>
+          </div>
+        </li>
+        <li class="featured-list-item">
+          <a href="#">
+            <img class="image-shop" src="./img/images/7.png" alt="YELLOW Tshirt">
+          </a>
+          <div class="bottom-shop clearfix ">
+            <h3 class="header-shop"><a class="header-shop-link " href="#">YELLOW Tshirt</a></h3>
+
+            <span class="price-shop">&#36;21</span>
+          </div>
+        </li>
+        <li class="featured-list-item">
+          <a href="#">
+            <img class="image-shop" src="./img/images/8.png" alt="Cool lingerie">
+          </a>
+          <div class="bottom-shop clearfix ">
+            <h3 class="header-shop"><a class="header-shop-link " href="#">Cool lingerie</a></h3>
+
+            <span class="price-shop">&#36;56</span>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="news-sheet">
+      <h2 class="Section-title">LATEST NEWS</h2>
+      <ul class="news-list clearfix">
+        <li class="news-list-item">
+          <img src="./img/image2/ipad-632394_960_720.jpg" alt="">
+          <h4 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h4>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora sequi,
+            libero fugit vel, voluptates minus quasi pariatur ex nesciunt repellendus
+            labore voluptate natus aperiam autem!</p>
+          <div class="click-button"> <button class="click" type="button">Read More</button></div>
+        </li>
+        <li class="news-list-item">
+          <img src="./img/image2/2.jpg" alt="">
+          <h4 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h4>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora sequi,
+            libero fugit vel, voluptates minus quasi pariatur ex nesciunt repellendus
+            labore voluptate natus aperiam autem!</p>
+          <div class="click-button"> <button class="click" type="button">Read More</button></div>
+        </li>
+        <li class="news-list-item">
+          <img src="./img/image2/3.jpg" alt="">
+          <h4 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h4>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora sequi,
+            libero fugit vel, voluptates minus quasi pariatur ex nesciunt repellendus
+            labore voluptate natus aperiam autem!</p>
+          <div class="click-button"> <button class="click" type="button">Read More</button></div>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 
