--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Module-4</title>
   <link rel="stylesheet" href="./css/style.css">
   <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Roboto:ital,wght@0,300;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&family=Roboto:ital,wght@0,300;1,900&display=swap"
     rel="stylesheet">
 </head>
 
