--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </nav>
   </header>
   <main class="main-content clearfix">
-    <section class="Name-of-product">
+    <section class="name-of-product">
       <h2 class="Section-title">FEATURED PRODUCTS</h2>
       <ul class="featured-list clearfix ">
         <li class="featured-list-item">
-          <a href="#" class="link-image ">
+          <a href="#">
             <img class="image-shop" src="./img/images/1.png" alt="Blue Tshirt"></a>
           <div class="bottom-shop clearfix ">
             <h3 class="header-shop "><a class="header-shop-link " href="#">Blue Tshirt</a></h3>
