--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <h2 class="Section-title">LATEST NEWS</h2>
       <ul class="news-list clearfix">
         <li class="news-list-item">
-          <img src="./img/image2/ipad-632394_960_720.jpg" alt="">
+          <img class="image-news" src="./img/image2/ipad-632394_960_720.jpg" alt="">
           <h4 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h4>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora sequi,
             libero fugit vel, voluptates minus quasi pariatur ex nesciunt repellendus
@@ -124,7 +124,7 @@
           <div class="click-button"> <button class="click" type="button">Read More</button></div>
         </li>
         <li class="news-list-item">
-          <img src="./img/image2/2.jpg" alt="">
+          <img class="image-news" src="./img/image2/2.jpg" alt="">
           <h4 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h4>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora sequi,
             libero fugit vel, voluptates minus quasi pariatur ex nesciunt repellendus
@@ -132,7 +132,7 @@
           <div class="click-button"> <button class="click" type="button">Read More</button></div>
         </li>
         <li class="news-list-item">
-          <img src="./img/image2/3.jpg" alt="">
+          <img class="image-news" src="./img/image2/3.jpg" alt="">
           <h4 class="subtitle">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenea</h4>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora sequi,
             libero fugit vel, voluptates minus quasi pariatur ex nesciunt repellendus
