--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
   <title>Module-4</title>
   <link rel="stylesheet" href="./css/style.css">
   <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&family=Roboto:ital,wght@0,300;1,900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto:wght@300;900&display=swap"
     rel="stylesheet">
-</head>
 
 <body>
   <header class="header-main clearfix">
 
     <h1 class="logo"> MART </h1>
 
-    <nav>
-      <ul class=" site-navigation  ">
+    <nav class="nav">
+      <ul class="site-navigation">
         <li><a href="#">HOME</a> </li>
         <li><a href="#">ABOUT US</a> </li>
         <li><a href="#">PAGE</a> </li>
